benchmark-results/7/merge/cseq/concurrentwitness2test.2024-11-08_13-30-27.logfiles/SV-COMP23_unreach-call.cseq-safe012_rmo.oepc.yml.log
ConcurrentWitness2Test/start.sh svcomp23-witness-benchmarks/tools/cseq/pthread-wmm/safe012_rmo.oepc.yml/safe012_rmo.oepc.i --graphml-witness svcomp23-witness-benchmarks/tools/cseq/pthread-wmm/safe012_rmo.oepc.yml/witness.graphml


--------------------------------------------------------------------------------


Traceback (most recent call last):
  File "/home/runner/work/ConcurrentWitness2Test/ConcurrentWitness2Test/ConcurrentWitness2Test/main.py", line 85, in translate_to_c
    sys.exit(-1)
SystemExit: -1
/tmp/BenchExec_run_dxu5h4r3/tmp/tmpux1tg5r0.c
Compilation started
/tmp/BenchExec_run_dxu5h4r3/tmp/tmpux1tg5r0.c: In function ‘P0’:
/tmp/BenchExec_run_dxu5h4r3/tmp/tmpux1tg5r0.c:583:19: error: ‘FALSE’ undeclared (first use in this function)
  583 |   weak$$choice0 = FALSE;;
      |                   ^~~~~
/tmp/BenchExec_run_dxu5h4r3/tmp/tmpux1tg5r0.c:583:19: note: each undeclared identifier is reported only once for each function it appears in
/tmp/BenchExec_run_dxu5h4r3/tmp/tmpux1tg5r0.c: In function ‘main’:
/tmp/BenchExec_run_dxu5h4r3/tmp/tmpux1tg5r0.c:696:19: error: ‘TRUE’ undeclared (first use in this function)
  696 |   weak$$choice1 = TRUE;;
      |                   ^~~~

Compilation ended (exit code 1)
Verdict: Compilation error
Verdict: Unknown error
